# SDLW

./: .gitignore  Adapters.md  Functionality.md  ReadMe.md  build.bat  go.mod  go.sum  test.go  usage_example.go
SDL/: SDL.go  SDL_assert.go  SDL_audio.go  SDL_error.go  SDL_hints.go  SDL_log.go  SDL_main.go  SDL_rwops.go  SDL_version.go  common.go
SDL/model/: AssertData.go  AssertState.go  AssertionHandler.go  AudioCVT.go  AudioCallback.go  AudioDeviceID.go  AudioFilter.go  AudioFormat.go  AudioSpec.go  AudioStatus.go  AudioStream.go  Bool.go  CleanupAudioStreamResamplerFunc.go  DataQueue.go  DataQueuePacket.go  Errorcode.go  HintCallback.go  HintPriority.go  LogCategory.go  LogOutputFunction.go  LogPriority.go  Mix_MusicAPI.go  RWops.go  ResampleAudioStreamFunc.go  ResetAudioStreamResamplerFunc.go  SDL_internal.go  Version.go
SDL_/: SDL_mixer.go
SDL_/model/: AssertionHandler.go  AudioFormat.go  DataQueue.go  DataQueuePacket.go  HintPriority.go  Mix_Music.go  Mix_MusicInterface.go  SDL_internal.go
SDL_Mixer/: SDL_mixer.go  common.go  external_functions.go
SDL_Mixer/model/: ChannelFinished.go  Chunk.go  EffectDone.go  EffectDone_t.go  EffectFunc.go  EffectFunc_t.go  Fading.go  Function.go  InitFlags.go  MixFunc.go  Music.go  MusicAPI.go  MusicFinished.go  MusicInterface.go  MusicType.go
audio/: Device.go  audio.go
development/: ReadMe.md
development/common/: Argument.go  FuncData.go  FuncDatum.go  Parameter.go  Word.go  string.go
development/parser/: func_parser.go
development/pp/: FuncParser.go  FuncProcessor.go  FuncProcessorSettings.go  errors.go  pp.go  (+1 more)
dll/: FuncMapping.go  dll.go
sdl/: CGO.go  SDL.go  SDL_assert.go  SDL_audio.go  SDL_error.go  SDL_hints.go  SDL_log.go  SDL_main.go  SDL_rwops.go  SDL_version.go  common.go
test/C/1/: CMakeLists.txt  main.c
test/C/2/: CMakeLists.txt  ReadMe.txt  SDL_is_stupid.h  UTF.c  UTF.h  console.c  console.h  main.c  std.c  std.h
test/C/2/sdl_mixer/stupid/: ReadMe.txt
win32/: errhandlingapi.go  win32.go
(+52 files in other folders)
